--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "moment": "^2.29.1"
+        "@inertiajs/inertia-vue3": "^0.3.5",
+        "moment": "^2.29.1",
+        "vue-select": "^3.11.2"
     }
 }
