--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "spatie/laravel-permission": "^4.0",
-        "tightenco/ziggy": "^1.0"
+        "tightenco/ziggy": "^1.0",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
